# business_dashboard

./: .gitignore  README.md  SPEC.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260625_0001_initial_schema.py
backend/app/: main.py  seed.py
backend/app/api/: acts.py  clients.py  deps.py  errors.py  import_statement.py  payments.py  projects.py  summary.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: __init__.py  act.py  base.py  client.py  payment.py  project.py
backend/app/repositories/: __init__.py  act.py  client.py  payment.py  project.py  summary.py
backend/app/schemas/: act.py  client.py  common.py  detail.py  import_statement.py  payment.py  project.py  summary.py
backend/app/services/: __init__.py  act_status_service.py  project_status_service.py  summary_service.py  update_act_service.py
backend/app/services/import_statement/: __init__.py  classifier.py  filter.py  invoice_extractor.py  mapper.py  parser.py  service.py
backend/tests/: conftest.py  db.py  factories.py  sql_counter.py  test_infrastructure.py
backend/tests/api/: conftest.py  test_acts_endpoint.py  test_clients_endpoint.py  test_import_endpoint.py  test_payments_endpoint.py  test_projects_endpoint.py  test_summary_endpoint.py
backend/tests/unit/repositories/: test_act_repository.py  test_client_repository.py  test_payment_repository.py  test_project_repository.py  test_summary_repository.py
backend/tests/unit/services/: test_act_status_service.py  (+3 more)
(+30 files in other folders)
